Update package.json to add jest configuration

--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/types/",
+      "index.tsx",
+      "serviceWorker.ts"
+    ]
+  }
 }
