--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "~3.7.2"
@@ -44,7 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-alert": "^5.2.0"
+    "@types/react-alert": "^5.2.0",
+    "@types/react-router-dom": "^5.1.5"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
